[project]
name = "email-outreach-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai>=1.15.2",
    "crewai-tools>=1.15.2",
    "ddgs>=9.14.4",
    "openai-agents>=0.18.2",
    "python-dotenv>=1.2.2",
    "streamlit>=1.59.1",
]
